update style.css and fully fix thumbs up and thumbs down icons overlapping issue on mobile

--- a/template/style.css
+++ b/template/style.css
@@ -1,4 +1,3 @@
-.recipe-display{height:300px;}
 .latest-recipes {margin-bottom:70px;}
 .g3{background:red;}
 .col-md-10,.col-md-2  {min-height:200px;height:auto;}
@@ -11,6 +10,7 @@
 .carousel{width:100%;}
 .carousel img{width:100%;}
 .col-md-4{margin:0;padding:0;}
+.recipe-display{height:300px;margin-bottom:10px;}
 .col-md-4 img{width:100%;height:100%;z-index:0;position:relative;}
 .row {margin:0;}
 #latest-h3{width:100%;padding-right:2%;padding-left:2%;padding-top:15px;padding-bottom:15px;background:#ccc;}
